--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,21 @@
   font-weight: 400;
   font-style: normal;
 }
+
+/* Divider */
+.divider{
+  margin: 10px 15px;
+  border: .7px solid #CDCDCD;
+}
+
+/* Button */
+.btn{
+  border: none;
+  color:#1F2128;
+  background-color: #FFCE22;
+  width: 100%;
+  height:40px;
+  font-size: 14px;
+  font-weight: 400;
+  margin: 10px 0px;
+}
