--- a/src/index.css
+++ b/src/index.css
@@ -2,28 +2,39 @@
 * {
   margin: 0;
   padding: 0;
-  /* background-color: black; */
-  
   font-family: "Montserrat", sans-serif;
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
+  color:#1F2128;
+  font-size: 14px;
+}
+html{
+  background-color: black;
 }
 
 /* Divider */
 .divider{
+  height:.7px;
+  background-color:#CDCDCD ;
   margin: 10px 15px;
-  border: .7px solid #CDCDCD;
 }
 
 /* Button */
 .btn{
   border: none;
+  border-radius: 4px;
   color:#1F2128;
   background-color: #FFCE22;
-  width: 100%;
+  width: 340px;
   height:40px;
   font-size: 14px;
-  font-weight: 400;
-  margin: 10px 0px;
+  margin: 10px 15px;
+}
+
+.btn:hover{
+  background-color: #FFD84D;
+}
+.btn:active{
+  background-color: #FFCE22;
 }
